kubernetes/apps/default/linkding/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  labels: &labels
    app.kubernetes.io/part-of: linkding
    app.kubernetes.io/name: linkding
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest-alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
          ports:
            - containerPort: 9090
              name: http
