kubernetes/apps/default/linkding/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  labels:
    app.kubernetes.io/part-of: linkding
    app.kubernetes.io/name: linkding
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: linkding
    app.kubernetes.io/name: linkding
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 9090
      targetPort: http
